test/corpus/declarations.txt
================================================================================
Variables declarations
================================================================================

// Unquoted string variable
$string = mystring
// Quoted string variable
$ipv4 = "8.8.8.8"
// Number variable
$number = 123
// Function call output variable
$out = $myFunction()

--------------------------------------------------------------------------------

(source_file
  (comment)
  (variable_assignment
    (variable
      (identifier))
    (literal
      (string
        (identifier))))
  (comment)
  (variable_assignment
    (variable
      (identifier))
    (literal
      (string)))
  (comment)
  (variable_assignment
    (variable
      (identifier))
    (literal
      (integer)))
  (comment)
  (variable_assignment
    (variable
      (identifier))
    (function_call
      (variable
        (identifier))
      (arguments))))

================================================================================
Multiple variables declarations
================================================================================

($x, $y) = ("abc", "def")
($x, $y, $z) = ("abc", (123), "def")

--------------------------------------------------------------------------------

(source_file
  (tuple_assignment
    (variable_list
      (variable
        (identifier))
      (variable
        (identifier)))
    (literal
      (list
        (literal
          (string))
        (literal
          (string)))))
  (tuple_assignment
    (variable_list
      (variable
        (identifier))
      (variable
        (identifier))
      (variable
        (identifier)))
    (literal
      (list
        (literal
          (string))
        (literal
          (list
            (literal
              (integer))))
        (literal
          (string))))))

================================================================================
Function declarations
================================================================================

function myFunction() {}
function myFunction(foo) {}
function myFunction(bar, baz=$lib.null) {}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (funcargs)
    (block))
  (function_definition
    (identifier)
    (funcargs
      (funcarg (identifier)))
    (block))
  (function_definition
    (identifier)
    (funcargs
      (funcarg (identifier))
      (funcarg
        (identifier)
        (selector_expression
          (variable
            (identifier))
          (identifier))))
    (block)))
