test/corpus/literals.txt
================================================================================
Comments
================================================================================

// This is a comment
/* This is a 
multiline comment */

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment))

================================================================================
Function definition
================================================================================

function getFooByBar(bar) {
  // This is a comment
}

--------------------------------------------------------------------------------

(source_file
      (function_definition
        (identifier)
        (funcargs
          (funcarg (identifier)))
        (block
          (comment))))

================================================================================
Function calls
================================================================================

$myFunction()
$myFunction(foo)
$myFunction($foo)
$myFunction(bar, baz=wheee)

--------------------------------------------------------------------------------

(source_file
    (expression_statement
      (function_call
        (variable
          (identifier))
        (arguments)))
    (expression_statement
      (function_call
        (variable
          (identifier))
        (arguments
          (argument
            (literal
              (string
                (identifier)))))))
    (expression_statement
      (function_call
        (variable
          (identifier))
        (arguments
          (argument
            (variable
              (identifier))))))
    (expression_statement
      (function_call
        (variable
          (identifier))
        (arguments
          (argument
            (literal
              (string
                (identifier))))
          (argument
            (keyword_argument
              (identifier)
              (literal
                (string
                  (identifier)))))))))

================================================================================
String literals
================================================================================

$a = "0"
$b = '123'
$c = '''abc
def'''
$d = `Hello {world}`
$e = `Hello {$world}`
$f = `Test {$lib.base64.encode($world)}`

--------------------------------------------------------------------------------

(source_file
      (variable_assignment
        (variable
          (identifier))
        (literal
          (string)))
      (variable_assignment
        (variable
          (identifier))
        (literal
          (string)))
      (variable_assignment
        (variable
          (identifier))
        (literal
          (string)))
      (variable_assignment
        (variable
          (identifier))
        (literal
          (string
            (interpolation
              (identifier)))))
      (variable_assignment
        (variable
          (identifier))
        (literal
          (string
            (interpolation
              (variable
                (identifier))))))
      (variable_assignment
        (variable
          (identifier))
        (literal
          (string
            (interpolation
              (function_call
                (selector_expression
                  (selector_expression
                    (variable
                      (identifier))
                    (identifier))
                  (identifier))
                (arguments
                  (argument
                    (variable
                      (identifier))))))))))

================================================================================
Boolean and null literals
================================================================================

$a = true
$b = false
$c = null

--------------------------------------------------------------------------------

(source_file
  (variable_assignment
    (variable
      (identifier))
    (literal
      (boolean)))
  (variable_assignment
    (variable
      (identifier))
    (literal
      (boolean)))
  (variable_assignment
    (variable
      (identifier))
    (literal
      (null))))

================================================================================
Lists and arrays
================================================================================

$list = (1, 2, 3)
$array = [4, 5, 6]
$empty_list = ()
$empty_array = []

--------------------------------------------------------------------------------

(source_file
  (variable_assignment
    (variable
      (identifier))
    (literal
      (list
        (literal (integer))
        (literal (integer))
        (literal (integer)))))
  (variable_assignment
    (variable
      (identifier))
    (literal
      (array
        (literal (integer))
        (literal (integer))
        (literal (integer)))))
  (variable_assignment
    (variable
      (identifier))
    (literal
      (list)))
  (variable_assignment
    (variable
      (identifier))
    (literal
      (array))))
